[tool.poetry]
name = "ssl"
version = "0.1.0"
description = ""
authors = ["nc"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pipdeptree = "^2.3.3"
ipykernel = "^6.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
